[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/diagraph/editor/GraphEdit.gd" type="Script" id=1]
[ext_resource path="res://addons/diagraph/resources/theme.tres" type="Theme" id=2]
[ext_resource path="res://addons/diagraph/dialog_box/OptionButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/diagraph/editor/DiagraphEditor.gd" type="Script" id=4]
[ext_resource path="res://addons/diagraph/dialog_box/DialogBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/diagraph/editor/Tree.gd" type="Script" id=6]
[ext_resource path="res://addons/diagraph/utils/MenuButton.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )

[sub_resource type="Image" id=19]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 167, 167, 167, 6, 224, 224, 224, 114, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 223, 223, 223, 56, 56, 56, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 59, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 187, 111, 111, 111, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 236, 223, 223, 223, 83, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 57, 56, 56, 56, 0, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 49, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 63, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 63, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 63, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 63, 223, 223, 223, 60, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 60, 167, 167, 167, 6, 224, 224, 224, 114, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 114, 167, 167, 167, 6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 12
}

[sub_resource type="ImageTexture" id=12]
image = SubResource( 19 )
size = Vector2( 12, 12 )

[sub_resource type="Image" id=20]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 167, 167, 167, 38, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 222, 222, 222, 57, 166, 166, 166, 8, 55, 55, 55, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 128, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 190, 223, 223, 223, 119, 220, 220, 220, 70, 55, 55, 55, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 128, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 190, 224, 224, 224, 128, 224, 224, 224, 247, 219, 219, 219, 69, 55, 55, 55, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 128, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 190, 223, 223, 223, 89, 223, 223, 223, 179, 223, 223, 223, 170, 220, 220, 220, 24, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 128, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 223, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 168, 168, 168, 64, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 128, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 128, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 128, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 128, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 128, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 128, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 128, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 128, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 128, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 128, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 128, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 128, 0, 0, 0, 0, 0, 0, 0, 0, 167, 167, 167, 26, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 167, 167, 167, 26, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 12
}

[sub_resource type="ImageTexture" id=14]
image = SubResource( 20 )
size = Vector2( 12, 12 )

[sub_resource type="Image" id=21]
data = {
"data": PoolByteArray( 166, 166, 166, 19, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 56, 56, 56, 0, 167, 167, 167, 38, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 166, 166, 166, 19, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 112, 112, 112, 0, 224, 224, 224, 128, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 63, 164, 164, 164, 13, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 56, 56, 56, 0, 167, 167, 167, 26, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 164, 164, 164, 13, 166, 166, 166, 19, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 56, 56, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 112, 112, 112, 0, 0, 0, 0, 0, 0, 0, 0, 0, 164, 164, 164, 13, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 56, 56, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 166, 166, 166, 19, 223, 223, 223, 77, 223, 223, 223, 77, 222, 222, 222, 57, 111, 111, 111, 0, 222, 222, 222, 57, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 166, 166, 166, 19, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 190, 222, 222, 222, 0, 223, 223, 223, 190, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 63, 164, 164, 164, 13, 222, 222, 222, 51, 222, 222, 222, 51, 221, 221, 221, 38, 110, 110, 110, 0, 221, 221, 221, 38, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 164, 164, 164, 13, 166, 166, 166, 19, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 167, 167, 167, 38, 0, 0, 0, 0, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 128, 0, 0, 0, 0, 164, 164, 164, 13, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 167, 167, 167, 26, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 12
}

[sub_resource type="ImageTexture" id=18]
image = SubResource( 21 )
size = Vector2( 12, 12 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.501961 )

[node name="DiagraphEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
rect_min_size = Vector2( 0, 250 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoSave" type="Timer" parent="."]
autostart = true

[node name="LeftPanelSplit" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/autohide = 0
split_offset = 150
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidebar" type="Control" parent="LeftPanelSplit"]
margin_right = 150.0
margin_bottom = 266.0

[node name="Panel" type="Panel" parent="LeftPanelSplit/Sidebar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="LeftPanelSplit/Sidebar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar" type="HBoxContainer" parent="LeftPanelSplit/Sidebar/VBoxContainer"]
visible = false
margin_right = 150.0
margin_bottom = 25.0

[node name="ToolButton" type="ToolButton" parent="LeftPanelSplit/Sidebar/VBoxContainer/Toolbar"]
margin_right = 73.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "btn"

[node name="MenuButton" type="MenuButton" parent="LeftPanelSplit/Sidebar/VBoxContainer/Toolbar"]
margin_left = 77.0
margin_right = 150.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "wut"

[node name="Tree" type="Tree" parent="LeftPanelSplit/Sidebar/VBoxContainer"]
margin_right = 150.0
margin_bottom = 266.0
size_flags_vertical = 3
allow_rmb_select = true
hide_root = true
script = ExtResource( 6 )
folder_icon = SubResource( 12 )
file_icon = SubResource( 14 )
card_icon = SubResource( 18 )

[node name="TextureRect" type="Button" parent="LeftPanelSplit/Sidebar/VBoxContainer/Tree"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
icon = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphContainer" type="Control" parent="LeftPanelSplit"]
margin_left = 158.0
margin_right = 476.0
margin_bottom = 266.0

[node name="GraphEdit" type="GraphEdit" parent="LeftPanelSplit/GraphContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
snap_distance = 10
zoom = 1.1
zoom_min = 0.1
zoom_max = 5.0
zoom_step = 1.1
show_zoom_label = true
minimap_enabled = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphToolbar" type="Control" parent="LeftPanelSplit/GraphContainer"]
anchor_right = 1.0
margin_left = 10.0
margin_right = -10.0
margin_bottom = 30.0

[node name="Panel" type="Panel" parent="LeftPanelSplit/GraphContainer/GraphToolbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_right = 10.0

[node name="HBox" type="HBoxContainer" parent="LeftPanelSplit/GraphContainer/GraphToolbar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleLeftPanel" type="Button" parent="LeftPanelSplit/GraphContainer/GraphToolbar/HBox"]
margin_right = 26.0
margin_bottom = 30.0
toggle_mode = true
text = "<<"
flat = true

[node name="ZoomContainer" type="HBoxContainer" parent="LeftPanelSplit/GraphContainer/GraphToolbar/HBox"]
margin_left = 30.0
margin_right = 30.0
margin_bottom = 30.0

[node name="SettingsMenu" type="MenuButton" parent="LeftPanelSplit/GraphContainer/GraphToolbar/HBox"]
margin_left = 34.0
margin_right = 91.0
margin_bottom = 30.0
text = "Settings"
items = [ "Scroll While Zooming", null, 1, false, false, 0, 0, null, "", false, "Set Font Size", null, 0, false, false, 1, 0, null, "FontSize", false ]
script = ExtResource( 7 )

[node name="Run" type="Button" parent="LeftPanelSplit/GraphContainer/GraphToolbar/HBox"]
margin_left = 95.0
margin_right = 128.0
margin_bottom = 30.0
text = "Run"
flat = true

[node name="Spacer" type="Control" parent="LeftPanelSplit/GraphContainer/GraphToolbar/HBox"]
margin_left = 132.0
margin_right = 268.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="ToggleRightPanel" type="Button" parent="LeftPanelSplit/GraphContainer/GraphToolbar/HBox"]
margin_left = 272.0
margin_right = 298.0
margin_bottom = 30.0
toggle_mode = true
text = ">>"
flat = true

[node name="ConfirmClear" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_min_size = Vector2( 150, 52.5 )
popup_exclusive = true
dialog_text = "Really clear all nodes?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dimmer" type="Panel" parent="Preview"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Preview"]
margin_left = 102.0
margin_top = 109.0
margin_right = 320.0
margin_bottom = 149.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stop" parent="Preview/HBoxContainer" instance=ExtResource( 3 )]
margin_bottom = 40.0
text = "Stop"

[node name="Next" parent="Preview/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 80.0
margin_right = 150.0
margin_bottom = 40.0
toggle_mode = true
text = "Next"

[node name="Debug" parent="Preview/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 160.0
margin_right = 230.0
margin_bottom = 40.0
toggle_mode = true
text = "Debug"

[node name="DialogFontMinus" parent="Preview/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 240.0
margin_right = 310.0
margin_bottom = 40.0
toggle_mode = true
text = "Font-"

[node name="DialogFontPlus" parent="Preview/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 320.0
margin_right = 390.0
margin_bottom = 40.0
toggle_mode = true
text = "Font+"

[node name="DialogBox" parent="Preview" instance=ExtResource( 5 )]
